@@ -3,8 +3,8 @@
     <setting label="30005" type="bool" id="keeporiginaltitle" default="false"/>
     <setting label="30000" type="bool" id="fanart" default="true"/>
     <setting label="30004" type="bool" id="trailer" default="true"/>
-    <setting label="30002" type="select" values="bg|cs|da|de|el|en|es|fa|fa-ir|fi|fr|he|hr|hu|it|ja|ko|nb|nl|no|pl|pt|pt-br|ro|ru|sk|sl|sr|sv|th|tr|uk|zh-cn|zh-tw" id="language" default="en"/>
-    <setting label="30006" type="select" values="au|bg|cs|da|de|el|es|fi|fr|gb|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|us|zh" id="tmdbcertcountry" default="us"/>
+    <setting label="30002" type="select" values="ar-AE|ar-SA|bg|bn-BD|ca-ES|ch-GU|cs|da|de|el|en|eo-EO|es|es-MX|eu-ES|fa|fa-ir|fi|fr|fr-CA|he|hi-IN|hr|hu|id-ID|it|ja|ka-GE|ko|lt-LT|lv-LV|ml-IN|nb|nl|no|pl|pt|pt-br|ro|ru|sk|sl|sr|sv|ta-IN|th|tr|uk|vi-VN|zh-cn|zh-tw" id="language" default="en"/>
+    <setting label="30006" type="select" values="au|bg|br|ca|cz|ge|de|dk|ee|es|fi|fr|gb|gr|hr|hu|id|il|in|it|ir|jp|kr|lt|lv|mx|nl|no|pl|pt|ru|si|sv|th|tr|ua|us|vn|zh" id="tmdbcertcountry" default="us"/>
     <setting label="30003" type="labelenum" values="TMDb|IMDb" id="RatingS" default="TMDb"/>
 	<setting label="30007" type="bool" id="imdbanyway" visible="eq(-1,0)" default="false"/>
     <setting label="certprefix" type="text" id="certprefix" default="Rated " visible="false"/>
